[RTL] Fix text overlapping $ on currency input question in rtl mode (#10583)

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -548,6 +548,10 @@ main {
     margin-inline-end: 0.5rem;
   }
 
+  .usa-input-prefix + input {
+    padding-inline-start: 2.5rem;
+  }
+
   // -- start
   /* Make the info/alert icons appear to the right of the label in RTL languages. */
   .usa-alert__body::before {
